Внесение правок по замечаниям в список
Внесение правок по замечаниям в список

--- a/catalog.html
+++ b/catalog.html
@@ -1,194 +1,200 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Каталог Нёрдс</title>
-	<link rel="stylesheet" type="text/css" href="css/catalog.css">
+    <meta charset="UTF-8">
+    <title>Каталог Нёрдс</title>
+    <link rel="stylesheet" type="text/css" href="css/catalog.css">
 </head>
 <body>
-  <!--шапка-->
-  	<header class="main header">
-  		<div class="container">
-  			<div class="index-logo">
-  				<a href="#"><img src="#" alt=""></a>
-  			</div>
-  			<nav class="main-navigation">
-  				<ul>
-  					<li>Студия
-  						<a href="#"></a>
-  					</li>
-  					<li>Клиенты
-  						<a href="#"></a>
-  						</li>
-  					<li>Магазин
-  						<a href="#"></a>
-  					</li>
-  					<li>Контакты
-  						<a href="#"></a>
-  					</li>
-  				</ul>
-  			</nav>
-  			<div class="basket">
-  				<a href="#">Корзина</a>
-  			</div>
-  		</div>
-  		<h1 class="index-title">Магазин готовых шаблонов</h1>	
-  	</header>
-<!--Основной контент-->
-  	<div class="container">
-  		<div class="sidebar">
-  			<form class="sidebar-form">
-          <div class="js-range">
-          </div>
-          <div class="form-group">
-      		  <label for="price-field-1">От</label>
-    			  <input type="text" name="price" id="price-field-1">
-          </div>
-          <div class="form-group">
-    			 <label for="price-field-2">До</label>
-    			 <input type="text" name="price" id="price-field-2">
-          </div>
-	  			<p>Сетка</p>
-	  			<ul>
-					 <li>
-						<input type="radio" name="adapt" id="adapt-field" checked>
-						<label for="adapt-field">Адаптивная</label>
-					 </li>
-					 <li>
-						<input type="radio" name="fix" id="fix-field">
-						<label for="fix-field"> Фиксированная</label>
-  					</li>
-  					<li>
-  						<input type="radio" name="liquid" id="liquid-field">
-  						<label for="liquid-field"> Резиновая</label>
-  					</li>
-	  			</ul>
-  				<p>Особенности</p>
-  				<ul>
-  					<li>
-  						<input type="checkbox" id="slider-field" checked>
-  						<label for="slider-field">Слайдер</label>
-  					</li>
-  					<li>
-  						<input type="checkbox" id="block-field">
-  						<label for="block-field">Блок преимуществ</label>
-  					</li>
-  					<li>
-  						<input type="checkbox" id="news-field" checked>
-  						<label for="news-field">Новости</label>
-  					</li>
-  					<li>
-  						<input type="checkbox" id="gallery-field">
-  						<label for="gallery-field">Галерея</label>
-  					</li>
-  					<li>
-  						<input type="checkbox" id="basket-field">
-  						<label for="basket-field">Корзина</label>
-  					</li>
-  				</ul>
-  				<button class="btn-sidebar" type="button">Показать</button>
-  			</form>
-		  </div>
-      <div class="index-content">
-    		<div class="sort-toglers">
-      			<h2>Сортировать:</h2>
-      			<ul>
-      				<li>По цене
-      				  <a href="#"></a>
-      				</li>
-      				<li>По типу
-      				  <a href="#"></a>
-      				</li>
-      				<li>По названию
-      				  <a href="#"></a>
-      				</li>
-      			</ul>
+    <!--шапка-->
+    <header class="main header">
+        <div class="container">
+            <div class="index-logo">
+                <a href="#"><img src="#" alt=""></a>
+            </div>
+            <nav class="main-navigation">
+                <ul>
+                    <li>
+                        Студия
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        Клиенты
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        Магазин
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        Контакты
+                        <a href="#"></a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="basket">
+                <a href="#">Корзина</a>
+            </div>
         </div>
-        <div class="catalog">
-          <article class="catalog-item">
-            <a class="js-modal" href="#"><img src="#" alt=""></a>
-            <div class="box-info">
-              <h2 class="box-title">Sedona</h2>
-              <p>Информационный сайт для туристов</p>
-              <button class="btn box-price"> 9 900 руб.</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="js-modal" href="#"><img src="#" alt=""></a>
-            <div class="box-info">
-              <h2 class="box-title">Sedona</h2>
-              <p>Информационный сайт для туристов</p>
-              <button class="btn box-price"> 9 900 руб.</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="js-modal" href="#"><img src="#" alt=""></a>
-            <div class="box-info">
-              <h2 class="box-title">Sedona</h2>
-              <p>Информационный сайт для туристов</p>
-              <button class="btn box-price"> 9 900 руб.</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="js-modal" href="#"><img src="#" alt=""></a>
-            <div class="box-info">
-              <h2 class="box-title">Sedona</h2>
-              <p>Информационный сайт для туристов</p>
-              <button class="btn box-price"> 9 900 руб.</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="js-modal" href="#"><img src="#" alt=""></a>
-            <div class="box-info">
-              <h2 class="box-title">Sedona</h2>
-              <p>Информационный сайт для туристов</p>
-              <button class="btn box-price"> 9 900 руб.</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="js-modal" href="#"><img src="#" alt=""></a>
-            <div class="box-info">
-              <h2 class="box-title">Sedona</h2>
-              <p>Информационный сайт для туристов</p>
-              <button class="btn box-price"> 9 900 руб.</button>
-            </div>
-          </article>
+        <h1 class="index-title">Магазин готовых шаблонов</h1>
+    </header>
+    <!--Основной контент-->
+    <div class="container">
+        <div class="sidebar">
+            <form class="sidebar-form">
+                <div class="js-range">
+                </div>
+                <div class="form-group">
+                    <label for="price-field-1">От</label>
+                    <input type="text" name="price" id="price-field-1">
+                </div>
+                <div class="form-group">
+                    <label for="price-field-2">До</label>
+                    <input type="text" name="price" id="price-field-2">
+                </div>
+                <p>Сетка</p>
+                <ul>
+                    <li>
+                        <input type="radio" name="adapt" id="adapt-field" checked>
+                        <label for="adapt-field">Адаптивная</label>
+                    </li>
+                    <li>
+                        <input type="radio" name="fix" id="fix-field">
+                        <label for="fix-field"> Фиксированная</label>
+                    </li>
+                    <li>
+                        <input type="radio" name="liquid" id="liquid-field">
+                        <label for="liquid-field"> Резиновая</label>
+                    </li>
+                </ul>
+                <p>Особенности</p>
+                <ul>
+                    <li>
+                        <input type="checkbox" id="slider-field" checked>
+                        <label for="slider-field">Слайдер</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="block-field">
+                        <label for="block-field">Блок преимуществ</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="news-field" checked>
+                        <label for="news-field">Новости</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="gallery-field">
+                        <label for="gallery-field">Галерея</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="basket-field">
+                        <label for="basket-field">Корзина</label>
+                    </li>
+                </ul>
+                <button class="btn-sidebar" type="button">Показать</button>
+            </form>
         </div>
-        <div class="index-content-btn">
-          <button class="btn content-pagination" type="button">1</button>
-          <button class="btn content-pagination" type="button">2</button>
-          <button class="btn content-pagination" type="button">3</button>
-          <button class="btn content-next">Следующая</button>
+        <div class="index-content">
+            <div class="sort-toglers">
+                <h2>Сортировать:</h2>
+                <ul>
+                    <li>
+                        <a href="#">По цене</a>
+                    </li>
+                    <li>
+                        <a href="#">По типу</a>
+                    </li>
+                    <li>
+                        <a href="#">По названию</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="catalog">
+                <article class="catalog-item">
+                    <a class="js-modal" href="#"><img src="#" alt=""></a>
+                    <div class="box-info">
+                        <h2 class="box-title">Sedona</h2>
+                        <p>Информационный сайт для туристов</p>
+                        <button class="btn box-price"> 9 900 руб.</button>
+                    </div>
+                </article>
+                <article class="catalog-item">
+                    <a class="js-modal" href="#"><img src="#" alt=""></a>
+                    <div class="box-info">
+                        <h2 class="box-title">Sedona</h2>
+                        <p>Информационный сайт для туристов</p>
+                        <button class="btn box-price"> 9 900 руб.</button>
+                    </div>
+                </article>
+                <article class="catalog-item">
+                    <a class="js-modal" href="#"><img src="#" alt=""></a>
+                    <div class="box-info">
+                        <h2 class="box-title">Sedona</h2>
+                        <p>Информационный сайт для туристов</p>
+                        <button class="btn box-price"> 9 900 руб.</button>
+                    </div>
+                </article>
+                <article class="catalog-item">
+                    <a class="js-modal" href="#"><img src="#" alt=""></a>
+                    <div class="box-info">
+                        <h2 class="box-title">Sedona</h2>
+                        <p>Информационный сайт для туристов</p>
+                        <button class="btn box-price"> 9 900 руб.</button>
+                    </div>
+                </article>
+                <article class="catalog-item">
+                    <a class="js-modal" href="#"><img src="#" alt=""></a>
+                    <div class="box-info">
+                        <h2 class="box-title">Sedona</h2>
+                        <p>Информационный сайт для туристов</p>
+                        <button class="btn box-price"> 9 900 руб.</button>
+                    </div>
+                </article>
+                <article class="catalog-item">
+                    <a class="js-modal" href="#"><img src="#" alt=""></a>
+                    <div class="box-info">
+                        <h2 class="box-title">Sedona</h2>
+                        <p>Информационный сайт для туристов</p>
+                        <button class="btn box-price"> 9 900 руб.</button>
+                    </div>
+                </article>
+            </div>
+            <div class="index-content-btn">
+                <button class="btn content-pagination" type="button">1</button>
+                <button class="btn content-pagination" type="button">2</button>
+                <button class="btn content-pagination" type="button">3</button>
+                <button class="btn content-next">Следующая</button>
+            </div>
         </div>
-      </div>
     </div>
-<!--Блок с картой-->
+    <!--Блок с картой-->
     <div class="map-canvas">
-      <div class="map">
-        <img src="#" alt="">
-      </div>
-      <div class="modal-window">
-        <h3>Nёrds design studio</h3>
-        <p>191186, Санкт-Петербург,<br>
-      ул.Б.Конюшенная, д.19/8
-        </p>  
-        <p>тел.: +7(812)275-75-75
-        </p>
-      </div>
-    </div>
-<!--футер-->
-    <footer class="main-footer">
-      <div class="container">
-        <section class="social">
-          <a class="social btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social btn social-btn-inst" href="#">Инстаграм</a>
-        </section>
-        <div class="footer-title">
-          <h1>Давайте дружить, это выгодно!</h1>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
+        <div class="map">
+            <img src="#" alt="">
         </div>
-      </div>
+        <div class="modal-window">
+            <h3>Nёrds design studio</h3>
+            <p>
+                191186, Санкт-Петербург,<br>
+                ул.Б.Конюшенная, д.19/8
+            </p>
+            <p>
+                тел.: +7(812)275-75-75
+            </p>
+        </div>
+    </div>
+    <!--футер-->
+    <footer class="main-footer">
+        <div class="container">
+            <section class="social">
+                <a class="social btn social-btn-vk" href="#">Вконтакте</a>
+                <a class="social btn social-btn-fb" href="#">Фейсбук</a>
+                <a class="social btn social-btn-inst" href="#">Инстаграм</a>
+            </section>
+            <div class="footer-title">
+                <h1>Давайте дружить, это выгодно!</h1>
+                <p>Скидка 10% для друзей из социальных сетей.</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
