--- a/catalog.html
+++ b/catalog.html
@@ -15,20 +15,16 @@
             <nav class="main-navigation">
                 <ul>
                     <li>
-                        Студия
-                        <a href="#"></a>
+                        <a href="#">Студия</a>
                     </li>
                     <li>
-                        Клиенты
-                        <a href="#"></a>
+                        <a href="#">Клиенты</a>
                     </li>
                     <li>
-                        Магазин
-                        <a href="#"></a>
+                        <a href="#">Магазин</a>
                     </li>
                     <li>
-                        Контакты
-                        <a href="#"></a>
+                        <a href="#">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -36,8 +32,8 @@
                 <a href="#">Корзина</a>
             </div>
         </div>
-        <h1 class="index-title">Магазин готовых шаблонов</h1>
     </header>
+    <h1 class="index-title">Магазин готовых шаблонов</h1>
     <!--Основной контент-->
     <div class="container">
         <div class="sidebar">
@@ -45,14 +41,14 @@
                 <div class="js-range">
                 </div>
                 <div class="form-group">
-                    <label for="price-field-1">От</label>
-                    <input type="text" name="price" id="price-field-1">
+                    <label for="price-field-from">От</label>
+                    <input type="text" name="price" id="price-field-from">
                 </div>
                 <div class="form-group">
-                    <label for="price-field-2">До</label>
-                    <input type="text" name="price" id="price-field-2">
+                    <label for="price-field-to">До</label>
+                    <input type="text" name="price" id="price-field-to">
                 </div>
-                <p>Сетка</p>
+                <h2 class="list-title">Сетка</h2>
                 <ul>
                     <li>
                         <input type="radio" name="adapt" id="adapt-field" checked>
@@ -67,7 +63,7 @@
                         <label for="liquid-field"> Резиновая</label>
                     </li>
                 </ul>
-                <p>Особенности</p>
+                <h2 class="list-title">Особенности</h2>
                 <ul>
                     <li>
                         <input type="checkbox" id="slider-field" checked>
@@ -90,7 +86,7 @@
                         <label for="basket-field">Корзина</label>
                     </li>
                 </ul>
-                <button class="btn-sidebar" type="button">Показать</button>
+                <button class="btn-sidebar" type="submit" name="button">Показать</button>
             </form>
         </div>
         <div class="index-content">
@@ -158,11 +154,11 @@
                     </div>
                 </article>
             </div>
-            <div class="index-content-btn">
-                <button class="btn content-pagination" type="button">1</button>
-                <button class="btn content-pagination" type="button">2</button>
-                <button class="btn content-pagination" type="button">3</button>
-                <button class="btn content-next">Следующая</button>
+            <div class="index-content-pagination">
+                <a href="#" class="content-pagination">1</a>
+                <a href="#" class="content-pagination">2</a>
+                <a href="#" class="content-pagination">3</a>
+                <a href="#" class="content-next">Следующая</a>
             </div>
         </div>
     </div>
@@ -191,7 +187,7 @@
                 <a class="social btn social-btn-inst" href="#">Инстаграм</a>
             </section>
             <div class="footer-title">
-                <h1>Давайте дружить, это выгодно!</h1>
+                <h2>Давайте дружить, это выгодно!</h2>
                 <p>Скидка 10% для друзей из социальных сетей.</p>
             </div>
         </div>
