--- a/index.html
+++ b/index.html
@@ -38,40 +38,43 @@
                     <img src="#" alt="">
                     <div class="main-slider-info">
                         <h2>Долго, дорого, скрупулезно.</h2>
-                        <p>Математически выверенный дизайн<br>
-                        для вашего сайта или мобильного приложения.
+                        <p>
+                            Математически выверенный дизайн<br>
+                            для вашего сайта или мобильного приложения.
                         </p>
-                        <button class="main-slider-btn" href="#"></button>
+                        <a class="main-slider-more" href="#">Узнать больше</a>
                     </div>
                 </li>
                 <li class="main-slider-item">
                     <img src="#" alt="">
                     <div class="main-slider-info">
                         <h2>Долго, дорого, скрупулезно.</h2>
-                        <p>Математически выверенный дизайн<br>
-                        для вашего сайта или мобильного приложения.
+                        <p>
+                            Математически выверенный дизайн<br>
+                            для вашего сайта или мобильного приложения.
                         </p>
-                        <button class="btn-more">Узнать больше </button>
+                        <a class="main-slider-more" href="#">Узнать больше</a>
                     </div>
                 </li>
                 <li class="main-slider-item">
                     <img src="#" alt="">
                     <div class="main-slider-info">
                         <h2>Долго, дорого, скрупулезно.</h2>
-                        <p>Математически выверенный дизайн<br>
-                        для вашего сайта или мобильного приложения.
+                        <p>
+                            Математически выверенный дизайн<br>
+                            для вашего сайта или мобильного приложения.
                         </p>
-                        <a class="main-slider-btn" href="#"></a>
+                        <a class="main-slider-more" href="#">Узнать больше</a>
                     </div>
                 </li>
             </ul>
-            <div class="main-slider-navigation">
-                <a class="first" href="#"></a>
-                <a class="second" href="#"></a>
-                <a class="third" href="#"></a>
-            </div>
         </div>
     </header>
+    <div class="slider-navigation">
+        <a class="current" href="#">First</a>
+        <a href="#">Second</a>
+        <a href="#">Third</a>
+    </div>
     <!--Основной контент-->
     <main class="container">
         <section class="features">
@@ -104,19 +107,25 @@
             </div>
             <div class="index-cotent-right">
                 <h3>С 2004 года любим точность во всем:</h3>
-                <b class="index-content-percent">146<sup>%</sup></b>
-                <p>Уровень самоотдачи</p>
-                <b class="index-content-percent">100<sup>%</sup></b>
-                <p>Соблюдение сроков</p>
-                <b class="index-content-percent">50<sup>%</sup></b>
-                <p>Минимальная предоплата</p>
+                <div class="index-content-block">
+                    <b class="index-content-percent">146<sup>%</sup></b>
+                    <p>Уровень самоотдачи</p>
+                </div>
+                <div class="index-content-block">
+                    <b class="index-content-percent">100<sup>%</sup></b>
+                    <p>Соблюдение сроков</p>
+                </div>
+                <div class="index-content-block">
+                    <b class="index-content-percent">50<sup>%</sup></b>
+                    <p>Минимальная предоплата</p>
+                </div>
             </div>
         </div>
         <section class="partners">
-            <a class="social btn social-btn-htmlac" href="#">Академия</a>
-            <a class="social btn social-btn-barbshop" href="#"> Барбершоп</a>
-            <a class="social btn social-btn-pink" href="#">Пинк</a>
-            <a class="social btn social-btn-mishka" href="#">Мишка</a>
+            <a class="partners-img" href="#"><img src="#"></a>
+            <a class="partners-img" href="#"><img src="#"></a>
+            <a class="partners-img" href="#"><img src="#"></a>
+            <a class="partners-img" href="#"><img src="#"></a>
         </section>
     </main>
     <!--Блок с картой-->
@@ -139,9 +148,9 @@
     <footer class="main-footer">
         <div class="container">
             <section class="social">
-                <a class="social btn social-btn-vk" href="#">Вконтакте</a>
-                <a class="social btn social-btn-fb" href="#">Фейсбук</a>
-                <a class="social btn social-btn-inst" href="#">Инстаграм</a>
+                <a class="social btn social-btn-vkontakte" href="#">Вконтакте</a>
+                <a class="social btn social-btn-facebook" href="#">Фейсбук</a>
+                <a class="social btn social-btn-instagram" href="#">Инстаграм</a>
             </section>
             <div class="footer-title">
                 <h1>Давайте дружить, это выгодно!</h1>
