Внесла alt к img в блоке "партнеры"
Внесла alt к img в блоке "партнеры"

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
             </div>
         </div>
         <section class="partners">
-            <a class="partners-img" href="#"><img src="#"></a>
-            <a class="partners-img" href="#"><img src="#"></a>
-            <a class="partners-img" href="#"><img src="#"></a>
-            <a class="partners-img" href="#"><img src="#"></a>
+            <a class="partners-img" href="#"><img src="#" alt=""></a>
+            <a class="partners-img" href="#"><img src="#" alt=""></a>
+            <a class="partners-img" href="#"><img src="#" alt=""></a>
+            <a class="partners-img" href="#"><img src="#" alt=""></a>
         </section>
     </main>
     <!--Блок с картой-->
