Исправление ошибок, доработка
Исправление ошибок

--- a/catalog.html
+++ b/catalog.html
@@ -33,11 +33,11 @@
             </div>
         </div>
     </header>
-    <h1 class="index-title">Магазин готовых шаблонов</h1>
+    <div class="index-title"><h1>Магазин готовых шаблонов</div></h1>
     <!--Основной контент-->
     <div class="container">
         <div class="sidebar">
-            <form class="sidebar-form">
+            <form class="sidebar-form" action="#" method="post">
                 <div class="js-range">
                 </div>
                 <div class="form-group">
@@ -182,9 +182,9 @@
     <footer class="main-footer">
         <div class="container">
             <section class="social">
-                <a class="social btn social-btn-vk" href="#">Вконтакте</a>
-                <a class="social btn social-btn-fb" href="#">Фейсбук</a>
-                <a class="social btn social-btn-inst" href="#">Инстаграм</a>
+                <a class="social btn social-btn-vkontakte" href="#">Вконтакте</a>
+                <a class="social btn social-btn-facebook" href="#">Фейсбук</a>
+                <a class="social btn social-btn-instagram" href="#">Инстаграм</a>
             </section>
             <div class="footer-title">
                 <h2>Давайте дружить, это выгодно!</h2>
