--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
             </div>
         </div>
         <section class="partners">
-            <a class="partners-img" href="#"><img src="#" alt=""></a>
-            <a class="partners-img" href="#"><img src="#" alt=""></a>
-            <a class="partners-img" href="#"><img src="#" alt=""></a>
-            <a class="partners-img" href="#"><img src="#" alt=""></a>
+            <a class="partners-img" href="#"><img src="#" alt="">HTML Academy</a>
+            <a class="partners-img" href="#"><img src="#" alt="">Barbershop</a>
+            <a class="partners-img" href="#"><img src="#" alt="">Pink</a>
+            <a class="partners-img" href="#"><img src="#" alt="">Mishka</a>
         </section>
     </main>
     <!--Блок с картой-->
@@ -148,12 +148,12 @@
     <footer class="main-footer">
         <div class="container">
             <section class="social">
-                <a class="social btn social-btn-vkontakte" href="#">Вконтакте</a>
-                <a class="social btn social-btn-facebook" href="#">Фейсбук</a>
-                <a class="social btn social-btn-instagram" href="#">Инстаграм</a>
+                <a class="social-vkontakte" href="#">Вконтакте</a>
+                <a class="social-facebook" href="#">Фейсбук</a>
+                <a class="social-instagram" href="#">Инстаграм</a>
             </section>
             <div class="footer-title">
-                <h1>Давайте дружить, это выгодно!</h1>
+                <h2>Давайте дружить, это выгодно!</h2>
                 <p>Скидка 10% для друзей из социальных сетей.</p>
             </div>
         </div>
