--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </header>
-    <div class="index-title"><h1>Магазин готовых шаблонов</div></h1>
+    <div class="index-title"><h1>Магазин готовых шаблонов</h1></div>
     <!--Основной контент-->
     <div class="container">
         <div class="sidebar">
