Изменения в slider navigation
Добавила класс в тег а

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </div>
     </header>
     <div class="slider-navigation">
-        <a class="current" href="#">First</a>
-        <a href="#">Second</a>
-        <a href="#">Third</a>
+        <a class="control" href="#">First</a>
+        <a class="control" href="#">Second</a>
+        <a class="control" href="#">Third</a>
     </div>
     <!--Основной контент-->
     <main class="container">
